# sae-forge

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: advanced-fsm-options.md  algorithm.md  audio-forge.md  concise-via-routing.md  finetune-recipe.md  flagship-gemma2-2b-demo.md  forge_config_example.yaml  hybrid_bridge_intel_gpt2.md  moe-forge.md  qwen3_moe_nvidia.md  two_basis_forge.md
docs/architectures/: README.md  esm2-650m.mmd  esm2-650m.n.orca.md  gemma-2-2b.mmd  gemma-2-2b.n.orca.md  gpt2-medium.mmd  gpt2-medium.n.orca.md  gpt2-small.mmd  gpt2-small.n.orca.md  llama-2-7b.mmd  llama-2-7b.n.orca.md  qwen2-7b.mmd  qwen2-7b.n.orca.md  qwen3-4b.mmd  qwen3-4b.n.orca.md
docs/architectures/_unsupported/: qwen3-moe.md  whisper-base.md
docs/proposals/: progressive-encoding-sweep-proposal-response.md  warm-start-proposal-response.md
docs/research/: m4-axis4-runbook.md
examples/: forge_gemma2_2b.py  forge_gpt2_real.py  forge_gpt2_real_sae.py  forge_gpt2_toy.py  forge_synthetic_llama.py  forge_whisper_synthetic.py  forge_with_gt_alignment.py
openspec/changes/adaptive-regrow/: design.md  proposal.md  tasks.md
openspec/changes/add-auto-materialise-sweep/: design.md  proposal.md  tasks.md
openspec/changes/add-block-structured-sae/: design.md  proposal.md  tasks.md
openspec/changes/add-capability-ceiling-diagnostic/: proposal.md  tasks.md
openspec/changes/add-capability-trained-encoder/: design.md  proposal.md  tasks.md
openspec/changes/add-causal-host-capability-sweep/: proposal.md  tasks.md
openspec/changes/add-closed-form-expert-routing/: design.md  proposal.md  tasks.md
openspec/changes/add-concept-anchored-finetune/: tasks.md
openspec/changes/add-downstream-capability-target/: design.md  proposal.md  tasks.md
openspec/changes/add-encoding-early-stopping/: design.md  proposal.md  tasks.md
openspec/changes/add-forge-quality-diagnostics/: design.md  proposal.md  tasks.md
openspec/changes/add-forged-activations-cache/: design.md  proposal.md  tasks.md
openspec/changes/add-full-forge-encoder-training/: design.md  proposal.md  tasks.md
openspec/changes/add-gpt-neox-adapter/: proposal.md  tasks.md
reports/layer_amplification/: k_103.json  k_103_host_native_ln.json  k_163.json  k_163_host_native_ln.json  k_211.json  k_211_host_native_ln.json  k_25.json  k_25_host_native_ln.json  summary.csv
reports/llama_rope/: summary.json
reports/moe_forge/: summary.json
saeforge/: __init__.py  audio_data.py  audio_eval.py  augmented_basis.py  auto_materialise.py  basis.py  bridges.py  calibration.py  capability_ceiling.py  circuit_heads.py  cli.py  composition_subspace.py  forge.py  forge_diff.py  forge_quality.py  forward_mode.py  hybrid_basis.py  isf.py  model.py  moe.py  orchestrator.py  polygram_diagnostics.py  projector.py  sweep.py  sweep_capability.py  sweep_capability_progressive.py  world_model.py
saeforge/_moe/: __init__.py  routers.py  sub_dictionary.py
saeforge/_positional/: rope.py
saeforge/actions/: __init__.py
saeforge/adapters/: __init__.py  _augmented.py  _hybrid.py  base.py  esm2.py  gemma2.py  gpt2.py  gpt_neox.py  llama.py  qwen2.py  qwen3.py  qwen3_moe.py  whisper.py
saeforge/datasets/: __init__.py  _host_cache.py  capability.py
saeforge/eval/: __init__.py  circuit_faithfulness.py  faithfulness.py
saeforge/eval/targets/: cosine.py  (+5 more)
saeforge/machines/: __init__.py  basis.orca.md  refine.orca.md  sae_forge.orca.md  stream.orca.md  visualize.py
saeforge/training/: __init__.py  concept_anchor.py  config.py  corpus.py  encoder.py  heads.py  loop.py  replay.py  schedules.py  task_stream.py
saeforge/utils/: __init__.py  host_loader.py  lazy.py  sae_layer.py
scripts/: capability_ceiling_gate.py  capability_ceiling_gate_results.json  causal_host_forge_gate.py  causal_host_forge_gate_results.json  causal_lm_forge_gate.py  causal_lm_forge_gate_results.json  compare_single_vs_hybrid_gpt2.py  compare_single_vs_two_basis_gpt2.py  diagnose_layer_amplification.py  diagnose_projection_magnitudes.py  forge_trained_encoder_bio_gate.py  forge_trained_encoder_gate.py  probe_polygram_clustering.py  prototype_gpt_neox.py  prototype_host_wrapped_forward.py  prototype_llama_rope.py  prototype_sae_moe_forge.py  pythia_ladder_gate.py  pythia_ladder_gate_results.json  smoke_qwen3.py  smoke_qwen3_moe.py  spike_forge_diff_autograd.py  validate_host_native_ln.py
tests/: conftest.py  test_architecture_adapters.py  test_audio_data.py  test_audio_eval.py  test_augmented_basis.py  test_auto_materialise.py  test_calibration.py  test_capability_acceptance_gate.py  test_capability_ceiling.py  test_capability_dataset.py  test_causal_host_sweep.py  test_circuit_faithfulness.py  test_circuit_heads.py  test_cli.py  test_cli_trained_encoder.py  test_composition_subspace.py  test_continual_learning_loop.py  test_distillation.py  test_downstream_capability_target.py  test_esm2_adapter.py  test_evaluate_faithfulness_dispatch.py  test_examples_smoke.py  test_faithfulness_target_protocol.py  test_feature_basis.py  test_feature_native_attention.py  test_forge_diff.py  test_forge_outer_loop_fsm.py  test_forge_pipeline.py  test_forge_pipeline_audio.py  test_forge_pipeline_unregistered_arch.py  test_forge_quality.py  test_forge_result_deprecation.py  test_forward_mode_dispatch.py  test_fsm_finetune_recipe.py  test_fsm_real_actions.py  test_full_sae_keys_in_synth_basis.py  test_gpt_neox_adapter.py  test_gt_alignment_target.py  test_hybrid_bridge.py  test_isf.py  (+36 more)
tests/fsm/: test_adaptive_regrow.py  test_diagram_drift.py  test_load_and_scan_ordering.py  test_multi_shard_hierarchy.py  test_runtime_compound.py  test_topology.py  test_visualize.py
tests/integration/: test_hybrid_bridge_gpt2.py  test_hybrid_bridge_llama.py  test_hybrid_bridge_qwen2.py  test_hybrid_bridge_qwen3.py  test_hybrid_bridge_qwen3_moe.py  test_qwen3_moe_adapter.py  test_two_basis_forge_gpt2.py
tests/training/: test_concept_anchor.py  test_concept_anchor_loop.py  test_concept_config.py  test_concept_heads.py
(+196 files in other folders)
