[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sae-forge"
dynamic = ["version"]
description = "sae-forge — turn a Polygram-compressed SAE into a small, semantically-native transformer"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Allan Scott" }
]
keywords = [
    "sparse-autoencoder",
    "interpretability",
    "transformer",
    "feature-basis",
    "polygram",
    "gemma-scope",
    "llama-scope",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "safetensors>=0.4",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
plot = ["matplotlib"]
notebook = ["jupyter", "matplotlib"]
# Torch + transformers — needed for native model construction, weight
# projection from a real source model, and fine-tuning. The pure-numpy
# basis loader and projector math stay on the no-extras install.
torch = ["torch>=2.2", "transformers>=4.40"]
# Polygram bridge — the canonical producer of compressed SAE checkpoints
# that sae-forge consumes. Pinned to the scale-aware-compression release
# (Polygram PR #34) so merged decoder norms are available.
polygram = ["polygram>=0.4"]
all = [
    "pytest",
    "ruff",
    "matplotlib",
    "jupyter",
    "torch>=2.2",
    "transformers>=4.40",
    "polygram>=0.4",
]

[project.scripts]
sae-forge = "saeforge.cli:main"

[project.urls]
Homepage = "https://github.com/jascal/sae-forge"
Source = "https://github.com/jascal/sae-forge"
"Bug Tracker" = "https://github.com/jascal/sae-forge/issues"

[tool.hatch.version]
path = "saeforge/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["saeforge"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
