[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sae-forge"
dynamic = ["version"]
description = "sae-forge — turn a Polygram-compressed SAE into a small, semantically-native transformer"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Allan Scott" }
]
keywords = [
    "sparse-autoencoder",
    "interpretability",
    "transformer",
    "feature-basis",
    "polygram",
    "gemma-scope",
    "llama-scope",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "safetensors>=0.4",
    # scipy.stats.rankdata powers the average-rank ties handling in
    # GroundTruthTarget's AUC helper (saeforge/eval/targets/gt_alignment.py).
    # Floor is conservative — rankdata has been stable since well before
    # 1.10; the floor exists so install errors on stale envs are
    # unambiguous, not to track a recent feature.
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
plot = ["matplotlib"]
notebook = ["jupyter", "matplotlib"]
# Torch + transformers — needed for native model construction, weight
# projection from a real source model, and fine-tuning. The numpy /
# scipy basis loader and projector math (plus the GT-alignment AUC
# helper) stay on the no-extras install.
torch = ["torch>=2.2", "transformers>=4.46"]
# Intel Mac (x86_64 macOS) compatibility set — drop-in replacement for
# `[torch]`. PyTorch's last x86_64 macOS wheel is 2.2.2 (CPython
# 3.10/3.11 only), and 2.2.2 was built against numpy 1.x, so installing
# under numpy 2 leaves `import torch` half-broken: it warns and disables
# the C extensions, which makes transformers's `is_torch_available()`
# return False with the misleading "PyTorch not found" ImportError. The
# transformers ceiling tracks the last release line that doesn't require
# a newer torch than 2.2.2.
intel = ["torch==2.2.2", "transformers>=4.46,<4.50", "numpy<2"]
# Polygram bridge — the canonical producer of compressed SAE checkpoints
# that sae-forge consumes. Pinned to a release that ships the
# polygram-tuning-config dataclasses (CompressionConfig,
# EpochCompressionConfig, RegrowConfig, …) and the `config=` kwarg
# accepted by Compressor / EpochCompressor / Regrower /
# BehaviouralValidator / Cancellation / from_sae_lens. Polygram 0.1.0
# also flipped the EpochCompressor defaults to the iterative preset and
# made Regrower.from_compression_report require explicit model_name and
# layer; this change adapts sae-forge to that surface. Polygram 0.2.0
# adds the GeometricProfile registry (clustered / uniform-sphere) and
# the bf16 safetensors slice-path fix; the upgrade is non-breaking
# (default profile="clustered" is byte-identical to the 0.1.0 path).
# Polygram 0.4.0 adds target-K compression (CompressionConfig grows
# `target_n_features_kept` + `score_field`, Compressor gains
# `plan_with_target` / `plan_pareto`, ParetoReport is exported);
# required for the `pareto-sweep` capability that consumes the
# `k_{K}.safetensors` artifacts emitted by
# `polygram compress --pareto --pareto-materialize`. Polygram 0.5.0
# adds `CompressionConfig.rep_selection="kl_attribution"`, a
# behavioural-ablation rep picker that flows through plan() /
# plan_with_target() / plan_pareto(); already exposed via
# sae-forge's `--rep-selection kl_attribution` CLI choice. Polygram
# 0.6.0 adds `from_sae_lens(..., assign_phase_knobs=True)` which
# un-dormants MPS-substrate α (PC2) and φ (PC3) on MPSRung1 / Rung3
# / Rung4 (HEA_Rung2 is a structural no-op). Default unchanged
# (False); sae-forge does not plumb the assign_* flags yet, so the
# bump is byte-identical for existing flows. Behavioural-incompat
# note for callers depending on PR-#63-era amp-on gram numbers:
# `assign_amp_knobs` PCA allocation shifted PC2-5 → PC4-7 to make
# room for the phase channels; qualitative invariants hold but
# exact values change (polygram v2.2 Axis-1 numbers need
# regeneration on a torch host).
# Polygram 0.7.0 adds Rung5 — configurable-amp-width product encoding
# (max_features = 8·2^k, k cap=16) for pareto sweeps above Rung4's
# 32-feature cap. Plumbed through `--encoding-class LABEL:Rung5
# --encoding-amp-qubits LABEL:K`.
# Polygram 0.8.0 adds LearnedKnobAssignment — calibrates the
# decoder-PCA→polygram-knob projection from data. Plumbed through
# `--learn-axis-assignment`; see polygram's
# docs/research/learned-axis-assignment.md.
# Polygram 0.9.0 promotes cluster_experts + ExpertDictionary to the
# public surface (PR #87). These are the foundation for sae-forge's
# planned MoE-from-SAE forging path (queued openspec change).
# Polygram 0.10.0 promotes `EpochReport.redundancy_ratio` /
# `n_features_input` (schema v2, v1 forward-compat shim) and the
# `BlockView` public surface on `ClusteredDictionary`.
polygram = ["polygram>=0.12.0"]
# orca-runtime-python — the classical orca-lang FSM runtime that drives
# the v0.1 forge-outer-loop-fsm orchestrator. Required only for the
# `--fsm` opt-in path; the default imperative ForgePipeline does not
# need it.
orca = ["orca-runtime-python>=0.1.27"]
# v0.3 forge-finetune-recipe — pulls HuggingFace `datasets` for the
# stream-from-HF corpus path. Local-file corpora work without this.
recipe = ["datasets>=2.16"]
# v0.4 forge-whisper-encoder — librosa for real-audio mel extraction
# from .wav / .flac. The synthetic fixture path
# (saeforge.audio_data.synthetic_mel_features) is pure-numpy and does
# not need this; pre-extracted mel features piped in via
# --audio-features-path also work without librosa. Install this extra
# only when you need to feed real audio through the forge eval.
audio = ["librosa>=0.10"]
all = [
    "pytest",
    "ruff",
    "matplotlib",
    "jupyter",
    "torch>=2.2",
    "transformers>=4.46",
    "polygram>=0.12.0",
    "orca-runtime-python>=0.1.27",
    "datasets>=2.16",
    "librosa>=0.10",
]

[project.scripts]
sae-forge = "saeforge.cli:main"

[project.urls]
Homepage = "https://github.com/jascal/sae-forge"
Source = "https://github.com/jascal/sae-forge"
"Bug Tracker" = "https://github.com/jascal/sae-forge/issues"

[tool.hatch.version]
path = "saeforge/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["saeforge"]

[tool.hatch.build.targets.wheel.shared-data]
"saeforge/machines/sae_forge.orca.md" = "saeforge/machines/sae_forge.orca.md"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
